@@ -19,6 +19,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 #pragma once
 
+#include <limits.h>
+
 #ifndef CANFIGGER_VERSION
 #define CANFIGGER_VERSION "0.1.1999"
 #endif
@@ -52,7 +54,6 @@ typedef st_canfigger_node st_canfigger_list;
 // Each node is of type st_canfigger_node.
 st_canfigger_list *canfigger_parse_file (const char *file,
                                          const char delimiter);
-
 
 //
 // Frees the list returned by canfigger_parse_file()
