@@ -24,13 +24,22 @@ foreach cflag : extra_flags
   endif
 endforeach
 
-src = (meson.source_root() / 'canfigger.c')
+inc = include_directories('.')
+
+src = ('canfigger.c')
 buildtarget = both_libraries(
   meson.project_name(),
   src,
+  include_directories : inc,
   version : meson.project_version(),
   soversion : '0',
   install: true)
+
+dep_canfigger_static = declare_dependency(include_directories : inc,
+  link_with : buildtarget.get_static_lib())
+
+dep_canfigger_shared = declare_dependency(include_directories : inc,
+  link_with : buildtarget.get_shared_lib())
 
 pkg = import('pkgconfig')
 pkg.generate(
