@@ -12,13 +12,13 @@ add_test_setup('valgrind',
   )
 endif
 
-main_lib = declare_dependency(link_with : buildtarget.get_static_lib())
+main_lib = declare_dependency(link_with : buildtarget.get_shared_lib())
 
 test_cases = [
   'test_parse_file',
   'test_parse_file2',
   'test_parse_file_colons',
-  'test_unicode'
+  'test_unicode',
   ]
 
 foreach case : test_cases
@@ -27,7 +27,7 @@ foreach case : test_cases
     case + '.c',
     include_directories : incdir,
     dependencies : [main_lib],
-    c_args: '-DSOURCE_DIR="@0@"'.format(meson.source_root())
+    c_args: '-DSOURCE_DIR="@0@"'.format(meson.current_source_dir())
   )
   test(case, exe)
 endforeach
