@@ -12,14 +12,15 @@ main (void)
   const struct expected data[] = {
     {"🐢👀🍻", "some chars", "unicode"},
     {"👀🍻💯", "", ""},
-    {"🍻💯💣", "looks like a 💣", "Some cartoon characters will be very unhappy."},
+    {"🍻💯💣", "looks like a 💣",
+     "Some cartoon characters will be very unhappy."},
   };
 
-  int req_len =
-    strlen ("test_unicode.conf") + strlen (SOURCE_DIR) + strlen ("tests") +
-    1 + 1 + 1;
-  char test_config_file[req_len];
-  sprintf (test_config_file, "%s/tests/test_unicode.conf", SOURCE_DIR);
+  char test_config_file[PATH_MAX];
+  assert ((size_t)
+          snprintf (test_config_file, sizeof test_config_file,
+                    "%s/test_unicode.conf",
+                    SOURCE_DIR) < sizeof test_config_file);
 
   // call the primary library function to read your config file
   st_canfigger_list *list = canfigger_parse_file (test_config_file, ';');
