@@ -1,5 +1,11 @@
 # Canfigger ChangeLog
 
+2021-12-26
+
+  * Code maintenance/refactor
+  * Minor adjustments to meson.build so that canfigger can be used as a
+  meson subproject
+
 2021-06-24
 
   * The docs now install when 'ninja install' is run
